zipkin-tracing/front-envoy-zipkin.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          generate_request_id: true
          tracing:
            operation_name: egress
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                  headers:
                    - name: ":method"
                      value: "POST"
                route:
                  cluster: service1
                  priority: HIGH
                decorator:
                  operation: updateAvailability
              - match:
                  prefix: "/"
                route:
                  cluster: service1
                  retry_policy:
                    retry_on: 5xx
                    num_retries: 3
                    per_try_timeout: 0.300s
                decorator:
                  operation: checkAvailability
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: service1
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    circuit_breakers:
      thresholds:
        - priority: DEFAULT
          max_connections: 1
          max_requests: 1
        - priority: HIGH
          max_connections: 2
          max_requests: 2
    hosts:
    - socket_address:
        address: service1
        port_value: 80
    - socket_address:
        address: service1a
        port_value: 80
  - name: zipkin
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: zipkin
        port_value: 9411
tracing:
  http:
    name: envoy.zipkin
    config:
      collector_cluster: zipkin
      collector_endpoint: "/api/v1/spans"
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
